--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.4",
+    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.0",
     "bootstrap": "^4.6.0",
+    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.3",
-    "react-scripts": "4.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -40,5 +43,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2"
   }
 }
