--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^17.0.4",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.0",
+    "axios-mock-adapter": "^1.19.0",
     "bootstrap": "^4.6.0",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
